# handler/user/delete.go
@@ -9,6 +9,15 @@ import (
 	"tzh.com/web/pkg/errno"
 )
 
+// @Summary 删除用户
+// @Description 在数据库中标记用户为删除状态
+// @Tags user
+// @Accept  json
+// @Produce  json
+// @Security ApiKeyAuth
+// @Param id path uint64 true "user id in database"
+// @Success 200 {object} handler.Response "{"code":0,"message":"OK","data": null}"
+// @Router /user/{id} [delete]
 func Delete(ctx *gin.Context) {
 	// 将文本转换为字符串
 	userId, _ := strconv.Atoi(ctx.Param("id"))
