# handler/user/list.go
@@ -7,9 +7,20 @@ import (
 	"tzh.com/web/service"
 )
 
+// @Summary 获取所有用户
+// @Description 从数据库中获取所有用户的信息
+// @Tags user
+// @Accept  json
+// @Produce  json
+// @Security ApiKeyAuth
+// @Param username query string false "part match username"
+// @Param offset query int true "data offset" default(0)
+// @Param limit query int true "data limit" default(10)
+// @Success 200 {object} user.ListResponse "{"code":0,"message":"OK","data": {}}"
+// @Router /user [get]
 func List(ctx *gin.Context) {
 	var r ListRequest
-	if err := ctx.ShouldBindJSON(&r); err != nil {
+	if err := ctx.ShouldBindQuery(&r); err != nil {
 		handler.SendResponse(ctx, errno.New(errno.ErrBind, err), nil)
 		return
 	}
